apps/base/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      securityContext:
        fsGroup: 33    # group ID
        runAsUser: 33  # user ID
        runAsGroup: 33 # group ID
      containers:
        - name: linkding
          image: sissbruecker/linkding:1.31.0
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 384Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: linkding-volume
              mountPath: /etc/linkding/data
          ports:
            - name: c-p-linkding
              containerPort: 9090
              protocol: TCP
      volumes:
        - name: linkding-volume
          persistentVolumeClaim:
            claimName: linkding-pvc
