apps/base/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
spec:
  ports:
    - name: s-p-linkding
      port: 9090
      protocol: TCP
      targetPort: c-p-linkding
  selector:
    app: linkding
  type: ClusterIP
